2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/ambitus.ly: Comment out ambitus until anal-proof.

	* buildscripts/mf-to-table.py (write_fontlist): change
	extra-extent-X extra-X-extent.

	* scm/music-property-description.scm (label): Typecheck markup?
	(was string?).

	* Documentation/user/refman.itely (Tablatures basic): Change
	TabStaff @lilypond snippets to @example until TabStaff is
	anal-proof.

2002-08-18  Rune Zedeler <rune@zedeler.dk>

	* mf/feta-klef.mf: (another) white pixels bug in g-clef fixed.
	
2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/include/lily-guile.hh (LY_DEFINE_NOARGS): Remove.

	* lily/grob-property.cc (internal_set_grob_property): Revert oops.

	* lily/input.cc (message): 
	* flower/warn.cc (message): Flush output.

	* po/lilypond.pot: Run make po-replace.

	* Documentation/user/GNUmakefile (LILYPOND_BOOK_FLAGS): be anal
	with type checks.

	* Documentation/GNUmakefile (LILYPOND_BOOK_FLAGS): 
	* input/regression/GNUmakefile (LILYPOND_BOOK_FLAGS):
	* input/test/GNUmakefile (LILYPOND_BOOK_FLAGS): 
	* Documentation/user/invoking.itexi: 
	* lily/scm-option.cc:
	* lily/main.cc: Debugging options: ly-set-option (was:
	set-lily-option).

	* lily/scm-option.cc (ly_option_usage): New function.

2002-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (script_abbreviation): accept -_ script.

	* ly/script-init.ly (dashUnderscore): add NOTE-_ == portato (dash
	and dot)

	* scripts/lilypond-book.py (re_dict): add spaces after command sequences
	(LatexPaper.find_latex_dims): run latex in nonstopmode

	* input/font-body.ly: remove.

	* input/test/harmonic.ly: new file.

	* lily/side-position-interface.cc (aligned_side): don't add
	padding again.

2002-08-18  Werner Lemberg  <wl@gnu.org>

	* ly/engraver-init.ly:
	s/extraverticalExtent/extraVerticalExtent/.
	
2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/parser.yy (assignment, Simple_music): Warning message fix.
	Junk ARRAY_SIZE definition.
