@@ -1,3 +1,8 @@
+2002-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/music.cc (internal_set_mus_property): [!NDEBUG] Remove, use
+	abort instead of assert.
+
 2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* input/test/ambitus.ly: Comment out ambitus until anal-proof.
